style.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}
html {
  /* To make the math easier */
  font-size: 62.5%;
}
body {
  padding: 1.5rem;
  box-sizing: border-box;
  display: flex;
}
.container {
  background-color: blue;
  color: #ffffff;
  margin: auto;
  width: 50%;
  text-align: center;
  border-radius: 5px;
  padding: 1.5rem;
}
.col-1-of-6 {
  background-color: #fff;
  color: #000;
  border-radius: 5px;
}
#weather-details {
  list-style: none;
  padding-bottom: 3px;
}
hr {
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
  margin: 8px 8px;
}

